# botstrats

./: .gitignore  LICENSE  README.md  botstrats.cabal  shell.nix  utils.sh
common/: GetLineNonBlocking.hs  Messages.hs  UUID.hs
doc/: concept.md  network.gv  protocol.md
resources/: .gitignore  makefile  shell.nix
server/: Actions.hs  Commands.hs  Game.hs  Main.hs  Messages.hs  Networking.hs  botstrats-server.cabal  config.lua  handle_connection.sh  handle_supervisor.sh  object_transfer.sh  server.lua  server.sh  shell.nix  timer.lua  utils.lua  utils.sh
server/actions/: access.lua  move.lua  query.lua  scan.lua  spawn.lua  start.lua
server/actions/access/: script
server/actions/access/ranges/: headquarters
server/actions/move/: script
server/actions/move/costs/: engineer  specialist
server/actions/query/: script
server/actions/scan/: script
server/actions/scan/costs/: headquarters
server/actions/scan/ranges/: headquarters
server/actions/spawn/: check  cost  range  script
server/actions/start/: check  cost  range  script
server/commands/: action  action.lua  invalid.lua  quit  robot_stopped  robot_stopped.lua  spawn  spawn.lua
server/lib/: collisions.lua  distance.lua  random_circle_position.lua  spawn.lua  vector.lua
server/pollers/: accept.lua  clients.lua
server/scripts/: random_position_inside_circle.sh  spawn_robot.sh
sniffer/: Main.hs  botstrats-sniffer.cabal  shell.nix  sniff.lua  sniff.sh  sniffer.sh
supervisor/: Commands.hs  GetLineNonBlocking.hs  Main.hs  Messages.hs  Mutables.hs  Robots.hs  botstrats-supervisor.cabal  handle_robot.sh  handle_server.sh  shell.nix  supervisor.sh
supervisor/commands/: access  invalid  open_ftp  result  spawn  start  welcome
supervisor/init/headquarters/: base.lua  init  prompt.lua  robot.lua  robot_init.sh
visualizer/: Main.hs  Networking.hs  botstrats-visualizer.cabal  graphics.lua  pop.sh  shell.nix  visualizer.lua  visualizer.sh
