name:                botstrats
version:             0.1.0.0
synopsis:            A strategy game that makes you program robots
homepage:            https://github.com/shak-mar/botstrats
license-file:        LICENSE
author:              shak-mar
maintainer:          shakmar@openmailbox.org
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- Versions:
-- base         >= 4.8  && < 4.9
-- transformers >= 0.4  && < 0.5
-- bytestring   >= 0.10 && < 0.11
-- directory    >= 1.2  && < 1.3
-- filepath     >= 1.4  && < 1.5
-- process      >= 1.2  && < 1.3
-- lens         >= 4.11 && < 4.12
-- network      >= 2.6  && < 2.7
-- mtl          >= 2.2  && < 2.3
-- aeson        >= 0.9  && < 0.10
-- uuid         >= 1.3  && < 1.4
-- random       >= 1.1  && < 1.2
-- gloss        >= 1.9  && < 1.10

executable botstrats-server
  main-is:             Main.hs
  build-depends:       base         >= 4.8  && < 4.9,
                       random       >= 1.1  && < 1.2,
                       bytestring   >= 0.10 && < 0.11,
                       network      >= 2.6  && < 2.7,
                       transformers >= 0.4  && < 0.5,
                       uuid         >= 1.3  && < 1.4,
                       mtl          >= 2.2  && < 2.3
  hs-source-dirs:      server
  default-language:    Haskell2010

executable botstrats-supervisor
  main-is:             Main.hs
  build-depends:       base         >= 4.8  && < 4.9,
                       directory    >= 1.2  && < 1.3,
                       filepath     >= 1.4  && < 1.5,
                       process      >= 1.2  && < 1.3,
                       lens         >= 4.11 && < 4.12,
                       uuid         >= 1.3  && < 1.4,
                       network      >= 2.6  && < 2.7,
                       bytestring   >= 0.10 && < 0.11,
                       mtl          >= 2.2  && < 2.3
  hs-source-dirs:      supervisor
  default-language:    Haskell2010

executable botstrats-visualizer
  main-is:             Main.hs
  build-depends:       base         >= 4.8  && < 4.9,
                       network      >= 2.6  && < 2.7,
                       gloss        >= 1.9  && < 1.10
  hs-source-dirs:      visualizer
  default-language:    Haskell2010
