name:                botstrats-server
version:             0.1.0.0
synopsis:            The server for botstrats
author:              shak-mar
maintainer:          shakmar@openmailbox.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable botstrats-server
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       network >2.0,
                       uuid >1.0.0,
                       parsec >= 3.0.0,
                       random >= 1.0,
                       mtl >= 2.0,
                       transformers >= 0.4
  default-language:    Haskell2010
