name:                botstrats-server
version:             0.1.0.0
synopsis:            The server for botstrats
author:              shak-mar
maintainer:          shakmar@openmailbox.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable botstrats-server
  main-is:             Main.hs
  build-depends:       base, network, uuid, random, mtl, transformers, bytestring
  default-language:    Haskell2010
