name:                botstrats-sniffer
version:             0.1.0.0
synopsis:            Sniffer for botstrats
homepage:            https://github.com/shak-mar/botstrats
author:              shak-mar
maintainer:          shakmar@openmailbox.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable botstrats-sniffer
  main-is:             Main.hs
  build-depends:       base, network, aeson, transformers, bytestring
  default-language:    Haskell2010
