name:                botstrats-supervisor
version:             0.1.0.0
synopsis:            Supervisor for botstrats
homepage:            https://github.com/shak-mar/botstrats
author:              shak-mar
maintainer:          shakmar@openmailbox.org
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable botstrats-supervisor
  main-is:             Main.hs
  build-depends:       base, bytestring, network, uuid, process, mtl,
                       transformers, directory, filepath, unix
  default-language:    Haskell2010
