name:                botstrats-visualizer
version:             0.1.0.0
synopsis:            Visualizer for botstrats, but can be used for other things
homepage:            https://github.com/shak-mar/botstrats
author:              shak-mar
maintainer:          shakmar@openmailbox.org
build-type:          Simple
cabal-version:       >=1.10

executable botstrats-visualizer
  main-is:             Main.hs
  build-depends:       base, transformers, gloss, network
  default-language:    Haskell2010
